# matchbox-panel-nvx

./: Makefile.am  README.md  configure.ac  matchbox-panel.pc.in
applets/: Makefile.applets
applets/battery/: battery-acpi.c  battery-apm.c  battery.c  battery.h
applets/brightness/: brightness.c
applets/clock/: clock.c
applets/common/: test_main.c
applets/exit/: exit.c
applets/launcher/: launcher.c
applets/notify/: applet.c  mb-notification.c  mb-notification.h  notify-store.c  notify-store.h
applets/showdesktop/: showdesktop.c
applets/startup/: startup.c
applets/startup-notify/: startup.c
applets/systray/: fixedtip.c  fixedtip.h  na-tray-child.c  na-tray-child.h  na-tray-manager.c  na-tray-manager.h  na-tray.c  na-tray.h  systray.c
applets/windowselector/: windowselector.c
matchbox-panel/: Makefile.am  mb-panel-scaling-image.c  mb-panel-scaling-image.h  mb-panel-scaling-image2.c  mb-panel-scaling-image2.h  mb-panel.c  mb-panel.h
mb-panel/: Makefile.am  mb-panel-scaling-image.c  mb-panel-scaling-image.h  mb-panel.c
